[workspace]
members = [
    "webrender",
    "webrender_api",
]
resolver = "2"

[workspace.dependencies]
gleam = "0.15.1"
glean = "=64.4.0"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

# optimizing glsl more makes a big difference in swgl build times
[profile.dev.package.glsl]
opt-level = 2

[profile.release.package.glsl]
opt-level = 2
